# ece1508

./: .gitignore  README.md  SLM_tests.ipynb  SLURM_Documentation.md  dashboard.py  demo.ipynb  pyproject.toml  requirements.txt
configs/: augmentation.toml  judge.toml  llm_baseline.toml  slm_finetune_augmented.toml  slm_finetune_original.toml  slm_smollm2_135m_finetune_original_highcap.toml  slm_smollm2_135m_finetune_original_highcap_loglikelihood.toml  slm_smollm2_360m_baseline.toml  slm_smollm2_360m_baseline_loglikelihood.toml  slm_smollm2_360m_finetune_original_highcap.toml  slm_smollm2_360m_finetune_original_highcap_loglikelihood.toml  slm_smollm2_baseline.toml  slm_smollm2_baseline_loglikelihood.toml  slm_smollm2_finetune.toml  slm_vanilla.toml
docs/: architecture.md  benchmark_run_inventory.md  documentation_audit.md  experiments_status.md  index.md  mlops.md  phase1_branch_status.md  project_briefing.tex  project_overview.md  spec.md  synthetic_data.md  workflows.md
finetuning/: SLM_tests.ipynb  finetune.py  plot_losses.py
llm_evaluation/: __init__.py  config.json  hf_client.py  mc_eval.py  ollama_client.py  plot_results.py  prompts.py  utils.py
slurm/: bootstrap_train_env.sh  common_env.sh  prune_run_checkpoints.py  run_canary_train_env.sh  run_deepseek.sh  run_eval_H.sh  run_eval_qwen2.5_3b_finetuned.sh  run_eval_qwen2.5_3b_finetuned_v2.sh  run_eval_smollm2_1.7b_finetuned.sh  run_eval_smollm2_1.7b_synthetic.sh  run_eval_smollm2_135m_baseline.sh  run_eval_smollm2_135m_baseline_loglikelihood.sh  run_eval_smollm2_360m_baseline.sh  run_eval_smollm2_360m_baseline_loglikelihood.sh  run_finetune_H.sh  run_finetune_qwen2.5_3b.sh  run_finetune_qwen2.5_3b_v2.sh  run_finetune_smollm2_1.7b.sh  run_finetune_smollm2_1.7b_synthetic.sh  run_qwen2.5_3b.sh  run_smollm2.sh  run_smollm2_1.7b.sh  run_smollm2_360m_zeroshot.sh  run_smollm2_base.sh  run_smollm2_base_loglikelihood.sh  run_smollm2_finetuned.sh  run_smollm2_finetuned_runC.sh  run_smollm2_finetuned_runG.sh  run_train_smollm2_135m_original_highcap.sh  run_train_smollm2_135m_original_highcap_loglikelihood.sh  run_train_smollm2_360m_original_highcap.sh  run_train_smollm2_360m_original_highcap_loglikelihood.sh
tests/: conftest.py  test_augmentation.py  test_benchmark_pipeline.py  test_causal_slm.py  test_cli.py  test_cli_end_to_end.py  test_config.py  test_data_preparation.py  test_eval_utils.py  test_evaluation_results.py  test_finetune_augmentation.py  test_loaders.py  (+22 more)
(+159 files in other folders)
