[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "recipe-mpr-qa"
version = "0.1.0"
description = "Recipe-MPR question answering experiment stack for specialized SLMs vs general LLMs."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "ECE1508 Team" }
]
license = { text = "MIT" }
dependencies = []

[project.optional-dependencies]
train = [
  "accelerate>=0.34",
  "datasets>=2.21",
  "peft>=0.13",
  "torch>=2.3",
  "transformers>=4.44",
]
llm = [
  "requests>=2.32",
]
tracking = [
  "mlflow>=2.17",
]
dev = [
  "pytest>=8.4",
]

[project.scripts]
recipe-mpr-qa = "recipe_mpr_qa.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-p no:cacheprovider"
