[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "recipe-mpr-qa"
version = "0.1.0"
description = "Recipe-MPR data preparation, loading, and model I/O formatting foundation."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "ECE1508 Team" }
]
license = { text = "MIT" }
dependencies = [
  "requests",
  "tqdm",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4",
]
slm = [
  "torch",
  "transformers",
  "accelerate",
  "peft",
  "datasets",
  "trl",
]
mlops = [
  "mlflow",
]

[project.scripts]
recipe-mpr-qa = "recipe_mpr_qa.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-p no:cacheprovider"
